Fixed layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -338,7 +338,13 @@ input[type=button] {
 }
 
 .features p {
+  text-align: center;
   margin: 0;
+}
+
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
 }
 
 /*Reviews*/
@@ -563,7 +569,7 @@ input[type=button] {
     }
 
     header nav {
-      width: 20%;
+      width: 30%;
     }
 
     header nav ul {
@@ -572,6 +578,10 @@ input[type=button] {
     }
 
     /* Hero Area */
+    .hero-area {
+      min-height: 600px;
+    }
+
     .hero-area h1 {
       font-size: 3em;
       line-height: 1;
@@ -672,7 +682,7 @@ input[type=button] {
 /* ==========================================================================
    About Page
    ========================================================================== */
- 
+
    .mission-content {
         display: flex;
         justify-content: space-between;
@@ -754,7 +764,7 @@ input[type=button] {
     /* Hero Area */
     .hero-area h1 {
       font-size: 3.75em;
-      width: 60%;
+      width: 80%;
     }
 
     /* Aside */
@@ -778,11 +788,6 @@ input[type=button] {
    
     .features article {
       flex-basis: 33%;
-    }
-
-    .features i {
-	    font-size: 3.75em;
-      margin-bottom: 40px;
     }
    
     /* Reviews */ 
